Version 6.0.1
- Fixed some issues in serializing and detection templates
  to enable serializing std::optional<time_point>.
- Added option to timeout JWT access tokens
- handle_file of template-processor now uses chunked transfer encoding
- Avoid crash when loading a non-regular file
- complete rewrite of uri class

Version 6.0.0
- Dropped boost::date_time and other boost libraries
- Fix daemon::reload
- New html_controller routines that mimic the rest_controller mapping
- Added access control object, for CORS handling
- Changed serialising of std::chrono time_point values.
- Redesigned login_controller

Version 5.1.8
- Fix bug in parsing binary multipart/form-data parameters

Version 5.1.7
- Fix dependency on std::filesystem library

Version 5.1.6
- Fix the visibility of types in zeep::json::detail::iterator_impl
- Reintroduced resolving of bind addresses, using "localhost" is
  easier than only numerical addresses.
- Return correct status code in case of catching an exception
  in rest controllers.
- Fix dependency in .cmake config file for Threads
- Generate config.hpp file.

Version 5.1.5
- update zeepConfig.cmake to include required link file
- fix infinite loop in processing incorrect :inline constructs

Version 5.1.4
- Update cmakefile to work more reliably

Version 5.1.3
- Update SONAME to 5.1
- Create reproducible builds of documentation (and thus whole package)

Version 5.1.2
- Fix glob code to match empty path specifications for controllers
- Change CMakeLists file to generate only shared or static libs,
  but not both
- Generate pkgconfig file again

Version 5.1.1
- Removed uriparser again. URI implementation is now regex based.
- Replaced GNU configure with cmake

Version 5.1.0
- Added base32 encoding/decoding
- Various REST controller fixes, mainly in accepting parameters
- The library is now always compiled with PIC
- Requred boost version is now 71
- Ignore SIGCHLD in foreground mode, signals are now handled by 
  cross platform implementation