@@ -5,6 +5,7 @@ Version 6.0.1
 - handle_file of template-processor now uses chunked transfer encoding
 - Avoid crash when loading a non-regular file
 - complete rewrite of uri class
+- Fix formatDecimal for negative numbers
 
 Version 6.0.0
 - Dropped boost::date_time and other boost libraries
